--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ environment:
   sdk: '>=2.6.0 <3.0.0'
 
 dependencies:
-  http: ^0.12.1
+  http: ^0.13.0
   logging: ^0.11.4
   meta: ^1.1.8
-  tuple: ^1.0.3
+  tuple: ^2.0.0-nullsafety.0
   web_socket_channel: ^1.1.0
   sse_client: ^0.0.3
   equatable: ^1.2.3
